--- a/src/Calculation/Calculator.form
+++ b/src/Calculation/Calculator.form
@@ -32,7 +32,7 @@
                           <Group type="102" attributes="0">
                               <Component id="btnC" min="-2" pref="81" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="btnBr" min="-2" pref="81" max="-2" attributes="0"/>
+                              <Component id="btnCe" min="-2" pref="81" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnMod" min="-2" pref="81" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -90,7 +90,7 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnC" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
-                  <Component id="btnBr" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                  <Component id="btnCe" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                   <Component id="btnMod" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                   <Component id="btnDiv" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
               </Group>
@@ -151,16 +151,16 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="btnBr">
+    <Component class="javax.swing.JButton" name="btnCe">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="()"/>
-        <Property name="toolTipText" type="java.lang.String" value="Bracks"/>
+        <Property name="text" type="java.lang.String" value="CE"/>
+        <Property name="toolTipText" type="java.lang.String" value="Current Clear"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBrActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCeActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnMod">
